# generics-sop

./: .gitignore  cabal.project
staged-sop-examples/: staged-sop-examples.cabal
staged-sop-examples/bench/: Bench.hs
staged-sop-examples/src/: ExampleFunctions.hs  ExampleTypes.hs
staged-sop-examples/test/: Test.hs
staged-sop/src/Generics/SOP/: Staged.hs
