cabal-version: 3.0
name: staged-sop-examples
version: 0.1
build-type: Simple

common dependencies
  default-language: Haskell2010
  build-depends:
    base,
    cborg,
    deepseq,
    sop-core ^>= 0.5,
    generics-sop ^>= 0.5,
    ghc-heap,
    nothunks,
    serialise,
    staged-sop,
    template-haskell,
    text,
    time

library
  import: dependencies
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
  exposed-modules:
    ExampleFunctions
    ExampleTypes

benchmark comparison
  import: dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Bench.hs
  build-depends:
    staged-sop-examples,
    gauge

test-suite test
  import: dependencies
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:
    staged-sop-examples,
    nothunks,
    tasty,
    tasty-quickcheck